--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -74,7 +74,7 @@ configuration:
     host: tootcommunity-search-es-http
     port: 9200
     scheme: http
-    preset: small_cluster # https://github.com/mastodon/documentation/pull/1279/files
+    preset: single_node_cluster # https://github.com/mastodon/documentation/pull/1279/files
     user: elastic
     password:
       secretKeyRef:
