--- a/mastodon-chart/templates/cronjob-accounts-prune.yaml
+++ b/mastodon-chart/templates/cronjob-accounts-prune.yaml
@@ -18,6 +18,7 @@ spec:
           {{- end }}
         spec:
           restartPolicy: Never
+          serviceAccountName: {{ include "mastodon.serviceAccountName" . }}
           containers:
             - name: accounts-prune
               image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
