--- a/mastodon-chart/templates/cronjob-statuses-remove.yaml
+++ b/mastodon-chart/templates/cronjob-statuses-remove.yaml
@@ -20,6 +20,7 @@ spec:
             {{- include "mastodon.labels" . | nindent 12 }}
         spec:
           restartPolicy: Never
+          serviceAccountName: {{ include "mastodon.serviceAccountName" . }}
           containers:
             - name: statuses-remove
               image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
