--- a/mastodon-chart/templates/cronjob-restart-web-deployment.yaml
+++ b/mastodon-chart/templates/cronjob-restart-web-deployment.yaml
@@ -21,7 +21,7 @@ spec:
             {{- include "mastodon.labels" . | nindent 12 }}
         spec:
           restartPolicy: OnFailure
-          serviceAccountName: {{ include "mastodon.serviceAccountName" . }}
+          serviceAccountName: {{ include "mastodon.fullname" . }}-restart-web-deployment
           containers:
             - name: kubectl-container
               image: bitnami/kubectl
