--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -346,7 +346,7 @@ jobs:
     days: 180
   periodicWebRestart:
     enabled: true
-    schedule: "0 4 * * *" # every day at 4am
+    schedule: "0 3,15 * * *"
 
 onePassword:
   - suffix: secrets-env
