Update target revision in Toot Community application
The targetRevision in the Toot Community ArgoCD application has been updated. It used to be 'main' but has now been changed to 'poc/complexity-cleanup', this revision simplifies increase in resource usage.

--- a/argocd/applications/tootcommunity.yaml
+++ b/argocd/applications/tootcommunity.yaml
@@ -18,4 +18,4 @@ spec:
       - values.yaml
     path: mastodon-chart
     repoURL: git@github.com:toot-community/kubernetes.git
-    targetRevision: main
+    targetRevision: poc/complexity-cleanup
