--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -379,7 +379,15 @@ keda:
       failureThreshold: 4 # allows prometheus to be down for (4 * 15) seconds before going to fallback
     ignoreNullValues: false
     threshold: 20
-    advanced: ~
+    advanced: 
+      horizontalPodAutoscalerConfig:
+        behavior:
+          scaleUp:
+            policies:
+              - type: Percent
+                value: 100
+                periodSeconds: 60
+            stabilizationWindowSeconds: 30
     memoryUtilizationScaling:
       enabled: false
       targetAverageUtilization: 225
